# pkg/model/req/blog_request.go
@@ -1,0 +1,7 @@
+package req
+
+type CreateBlogDto struct {
+	Title string `json:"title"`
+	Body  string `json:"body"`
+	Image string `json:"image"`
+}
